--- a/RangeUISliderDemo/Base.lproj/Main.storyboard
+++ b/RangeUISliderDemo/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="j89-zd-GID">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,7 +10,7 @@
         <!--Mixed features-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Demo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RangeUISliderDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -424,7 +423,7 @@
         <!--Grouped Features Table View Controller-->
         <scene sceneID="WZW-4A-Yyl">
             <objects>
-                <tableViewController id="Vf0-bA-VyT" customClass="GroupedFeaturesTableViewController" customModule="Demo" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="Vf0-bA-VyT" customClass="GroupedFeaturesTableViewController" customModule="RangeUISliderDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="2JL-8v-Mka">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -678,7 +677,7 @@
         <!--Change Knobs Programmatic View Controller-->
         <scene sceneID="MR2-3S-4kX">
             <objects>
-                <viewController id="HX8-Hb-IrR" customClass="ChangeKnobsProgrammaticViewController" customModule="Demo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="HX8-Hb-IrR" customClass="ChangeKnobsProgrammaticViewController" customModule="RangeUISliderDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Afg-58-x2W"/>
                         <viewControllerLayoutGuide type="bottom" id="RR1-Z8-gUs"/>
@@ -697,7 +696,7 @@
         <!--Programmatic setup-->
         <scene sceneID="fkj-fM-Eet">
             <objects>
-                <viewController title="Programmatic setup" id="dWr-eS-hUn" customClass="SetupProgrammaticViewController" customModule="Demo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Programmatic setup" id="dWr-eS-hUn" customClass="SetupProgrammaticViewController" customModule="RangeUISliderDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="MiD-eI-xQc"/>
                         <viewControllerLayoutGuide type="bottom" id="HMp-d8-G1l"/>
@@ -715,13 +714,13 @@
         <!--InsideTableView-->
         <scene sceneID="v5Z-OY-1zw">
             <objects>
-                <tableViewController title="InsideTableView" id="RLA-sf-Itw" customClass="SliderInsideTableViewViewController" customModule="Demo" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="InsideTableView" id="RLA-sf-Itw" customClass="SliderInsideTableViewViewController" customModule="RangeUISliderDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="I9c-sr-esf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="CellWithSlider" id="ewv-mI-oXT" customClass="CellWithSlider" customModule="Demo" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="CellWithSlider" id="ewv-mI-oXT" customClass="CellWithSlider" customModule="RangeUISliderDemo" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ewv-mI-oXT" id="k2a-7i-CaJ">
@@ -1032,7 +1031,7 @@
         <!--Change Scale Programmatic View Controller-->
         <scene sceneID="xgV-r8-PBM">
             <objects>
-                <viewController id="IzU-JN-Igw" customClass="ChangeScaleProgrammaticViewController" customModule="Demo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="IzU-JN-Igw" customClass="ChangeScaleProgrammaticViewController" customModule="RangeUISliderDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="zn7-71-4aA"/>
                         <viewControllerLayoutGuide type="bottom" id="cb5-Y6-Cum"/>
